--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                 </div>
               </div>
               <!-- ─── categories────────────────────────────────────────────────────── ✣ ─ -->
-              <div class="flex border-b sm:w-5/6">
+              <div class="hidden lg:flex border-b sm:w-5/6">
                 <!-- ─── Primary────────────────────────────────────────────────────── ✣ ─ -->
                 <div
                   class="flex items-center flex-1 gap-4 border-b-2 p-5 w-max"
