--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           >
             <!-- ─── Search Icon ─────────────────── ✣ ─ -->
             <div
-              class="px-2 flex justify-center items-center rounded-full hover:bg-zinc-500 cursor-pointer"
+              class="p-2 flex justify-center items-center rounded-full hover:bg-zinc-500 cursor-pointer"
             >
               <i class="fa fa-search lg:text-base text-[10px]"></i>
             </div>
@@ -164,8 +164,8 @@
             />
             <!-- ─── Settings icon────────────── ✣ ─ -->
             <div
-              class="px-2 flex justify-center items-center rounded-full hover:bg-zinc-500 cursor-pointer"
-            >
+              class="p-2 flex justify-center items-center rounded-full hover:bg-zinc-500 cursor-pointer"
+            >gid
               <i class="fa fa-sliders lg:text-base text-[10px]"></i>
             </div>
             <!-- ─── Search Bar+ Icons ends───── ✣ ─ -->
